--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   width: 35%;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   /* justify-content: space-evenly; */
-  margin: auto;
+  margin: 0 auto;
 }
 
 input {
